4.Bug:Foi quebrada a linha da seção azul utilizando a tag word-wrap: break-word

--- a/semana3/semana3/semana3/bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/semana3/semana3/bugfixes/exercicio-bugfixes/index.css
@@ -74,6 +74,7 @@ div img {
     background-color: #2274a5;
     color: white;
     padding-top: 250px;
+    word-wrap: break-word;
 }
 
 #container-de-descricao>ol {
